<resources>
    <string name="app_name">PaginaLogin</string>
    <string name="Esqueci"><u>Esqueci a Senha</u></string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="produto_tv">Tv 65 polegadas</string>
    <string name="descricao_tv">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="valor_tv">R$ 5.000,00</string>

    <string name="prod_aleatorio">Produto</string>
    <string name="quant_aleatorio">12</string>
    <string name="preco_aleatorio">R$ 0.00</string>
    <string name="alugar">Alugar</string>

    <string name="input_nome">Nome</string>
    <string name="input_cpf">CPF</string>
    <string name="input_nascimento">Data de Nascimento</string>
    <string name="input_cep">CEP</string>
    <string name="input_logradouro">Logradouro</string>
    <string name="input_numero">Número</string>
    <string name="input_complemento">Complemento</string>
    <string name="input_bairro">Bairro</string>
    <string name="input_cidade">Cidade</string>
    <string name="input_uf">UF</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">lugaluga.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_produtos">Produtos</string>
    <string name="menu_solicitacao">Solicitações</string>
    <string name="menu_acompanhamento">Acompanhamento</string>
    <string name="menu_atendimento">Atendimento</string>
    <string name="menu_sobre_nos">Sobre Nós</string>
    <string name="menu_fale_conosco">Fale Conosco</string>

    <string name="nosso_email">Duvidas ou Encontrou algum problema? Entre em contato conosco por meio do nosso E-mail:</string>
    <string name="telDuvidas">Prefere Ligar? Aqui está o número:</string>
    <string name="telefone">000 00 000000000</string>

    <string name="deixar_dados">Deixe seus dados aqui para que possamos entrar em contato</string>
    <string name="telefoneCliente">Telefone</string>
    <string name="ajuda">Esperamos ter ajudado!</string>

    <string name="lugalga">Luga Luga</string>
    <string name="bemvindo">Bem-Vindo ao LugaLuga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>