<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink"
        app:titleTextColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        tools:layout_editor_absoluteX="-13dp">

        <ImageView
            android:id="@+id/image_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lapis_cadastro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_nome"
            app:layout_constraintTop_toBottomOf="@+id/image_cadastro">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_cpf"
            app:layout_constraintTop_toBottomOf="@+id/input_nome">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_nascimento"
            app:layout_constraintTop_toBottomOf="@+id/input_cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_cep"
            app:layout_constraintTop_toBottomOf="@+id/input_nascimento">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_logradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_logradouro"
            app:layout_constraintTop_toBottomOf="@+id/input_cep"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="260dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/input_numero"
            app:layout_constraintLeft_toRightOf="@+id/input_logradouro"
            app:layout_constraintTop_toBottomOf="@+id/input_cep">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="115dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_complemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_complemento"
            app:layout_constraintTop_toBottomOf="@+id/input_numero"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="187dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/input_bairro"
            app:layout_constraintLeft_toRightOf="@+id/input_complemento"
            app:layout_constraintTop_toBottomOf="@+id/input_numero">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="188dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_cidade"
            app:layout_constraintTop_toBottomOf="@+id/input_bairro"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="255dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/input_uf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="87dp"
            android:hint="@string/input_uf"
            app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/input_cidade"
            app:layout_constraintTop_toBottomOf="@+id/input_bairro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/input_cidade">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/pink"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_senha" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>