<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink"
        app:titleTextColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

    <ImageView
        android:id="@+id/img_carrinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrinho"/>

    <TextView
        android:id="@+id/nome_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produto_tv"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_carrinho" />

    <TextView
        android:id="@+id/preco_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_tv"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_carrinho" />
        />
    <TextView
        android:id="@+id/descricao_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao_tv"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_TV"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>